feat: support listing workspace members
