# src/types/generated.ts
@@ -1,7 +1,7 @@
 // Auto-generated by zimic.
 // NOTE: Do not manually edit this file. Changes will be overridden.
 
-import type { HttpHeadersSerialized, HttpSchema } from 'zimic/http';
+import type { HttpHeadersSerialized, HttpSchema, HttpSearchParamsSerialized } from 'zimic/http';
 
 export type BlinkSchema = HttpSchema.Paths<{
   '/users': {
@@ -47,14 +47,14 @@ export type BlinkSchema = HttpSchema.Paths<{
   '/workspaces/:workspaceId/members': {
     /** Listar membros */
     GET: BlinkOperations['workspaces/members/list'];
-    /** Atualizar membro */
-    PUT: BlinkOperations['workspaces/members/update'];
     /** Adicionar membro */
     POST: BlinkOperations['workspaces/members/create'];
   };
   '/workspaces/:workspaceId/members/:memberId': {
     /** Buscar membro */
     GET: BlinkOperations['workspaces/members/get'];
+    /** Atualizar membro */
+    PUT: BlinkOperations['workspaces/members/update'];
     /** Remover membro */
     DELETE: BlinkOperations['workspaces/members/delete'];
   };
@@ -544,11 +544,25 @@ export interface BlinkOperations {
     };
   }>;
   'workspaces/members/list': HttpSchema.Method<{
+    request: {
+      searchParams: HttpSearchParamsSerialized<{
+        /** @description O nome do membro para filtrar */
+        name?: string;
+        /** @description O tipo do membro para filtrar */
+        type?: BlinkComponents['schemas']['WorkspaceMemberType'];
+        /** @description O número da página */
+        page?: number;
+        /** @description O número de membros por página */
+        limit?: number;
+      }>;
+    };
     response: {
       /** @description Membros listados */
       200: {
         body: {
-          members?: BlinkComponents['schemas']['WorkspaceMember'][];
+          members: BlinkComponents['schemas']['WorkspaceMember'][];
+          /** @example 1 */
+          total: number;
         };
       };
       /** @description Não autenticado */
@@ -560,39 +574,6 @@ export interface BlinkOperations {
         body: BlinkComponents['schemas']['AuthError'];
       };
       /** @description Workspace não encontrado */
-      404: {
-        body: BlinkComponents['schemas']['NotFoundError'];
-      };
-      /** @description Erro no servidor */
-      500: {
-        body: BlinkComponents['schemas']['InternalServerError'];
-      };
-    };
-  }>;
-  'workspaces/members/update': HttpSchema.Method<{
-    request: {
-      body: {
-        type?: BlinkComponents['schemas']['WorkspaceMemberType'];
-      };
-    };
-    response: {
-      /** @description Membro atualizado */
-      200: {
-        body: BlinkComponents['schemas']['WorkspaceMember'];
-      };
-      /** @description Erro de validação */
-      400: {
-        body: BlinkComponents['schemas']['ValidationError'];
-      };
-      /** @description Não autenticado */
-      401: {
-        body: BlinkComponents['schemas']['AuthError'];
-      };
-      /** @description Não autorizado */
-      403: {
-        body: BlinkComponents['schemas']['AuthError'];
-      };
-      /** @description Membro não encontrado */
       404: {
         body: BlinkComponents['schemas']['NotFoundError'];
       };
@@ -641,6 +622,39 @@ export interface BlinkOperations {
       /** @description Membro encontrado */
       200: {
         body: BlinkComponents['schemas']['WorkspaceMember'];
+      };
+      /** @description Não autenticado */
+      401: {
+        body: BlinkComponents['schemas']['AuthError'];
+      };
+      /** @description Não autorizado */
+      403: {
+        body: BlinkComponents['schemas']['AuthError'];
+      };
+      /** @description Membro não encontrado */
+      404: {
+        body: BlinkComponents['schemas']['NotFoundError'];
+      };
+      /** @description Erro no servidor */
+      500: {
+        body: BlinkComponents['schemas']['InternalServerError'];
+      };
+    };
+  }>;
+  'workspaces/members/update': HttpSchema.Method<{
+    request: {
+      body: {
+        type?: BlinkComponents['schemas']['WorkspaceMemberType'];
+      };
+    };
+    response: {
+      /** @description Membro atualizado */
+      200: {
+        body: BlinkComponents['schemas']['WorkspaceMember'];
+      };
+      /** @description Erro de validação */
+      400: {
+        body: BlinkComponents['schemas']['ValidationError'];
       };
       /** @description Não autenticado */
       401: {
